EKS/ALB-Context-path/templates/simple-webapp-app1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp-app1
  labels:
    app: simple-weapp-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-webapp-app1
  template:
    metadata:
      labels:
        app: simple-webapp-app1
    spec:
      containers:
      - name: simple-webapp-app1
        image: fabenavideso/simple-webapp:1.0.0-basic
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-webapp-app1
  name: simple-webapp-app1-service
spec:
  ports:
  - port: 80    # External port
    protocol: TCP
    targetPort: 8080  # Port on pod
  selector:
    app: simple-webapp-app1
  type: NodePort
