EKS/ALB-Context-path/templates/simple-webapp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: simple-app-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: myalb-k8s-test-2023
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /app1
          pathType: Prefix  # Exact
          backend:
            service:
              name: simple-webapp-app1-service
              port:
                number: 80
    - http:
        paths:
        - path: /app2
          pathType: Prefix  # Exact
          backend:
            service:
              name: simple-webapp-app2-service
              port:
                number: 80
